test/libsolidity/syntaxTests/freeFunctions/invalid_function_named_unicode.sol
function unicode() returns {}

// ----
// ParserError 2314: (9-16): Expected identifier but got 'ILLEGAL'
